nav footer small fix on mobile

--- a/src/app/css/pages/_places/nav-footer.scss
+++ b/src/app/css/pages/_places/nav-footer.scss
@@ -48,7 +48,17 @@
 
 		.nav-block {
 			overflow: hidden;
+
+			//
 			height: 230px;
+
+			@media (#{$phone}) {
+				height: 100px;
+
+				img {
+					opacity: 0;
+				}
+			}
 
 			border-radius: 2px;
 
